<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout style="@style/LayoutAttributeUser">

                <TextView
                    style="@style/DetailUserHintTextTheme"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/username"
                    style="@style/DetailUserTextTheme"
                    android:text="@string/username" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout style="@style/LayoutAttributeUser">

                <TextView
                    style="@style/DetailUserHintTextTheme"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/email"
                    style="@style/DetailUserTextTheme"
                    android:text="@string/email" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout style="@style/LayoutAttributeUser">

                <TextView
                    style="@style/DetailUserHintTextTheme"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/address"
                    style="@style/DetailUserTextTheme"
                    android:text="@string/address" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout style="@style/LayoutAttributeUser">

                <TextView
                    style="@style/DetailUserHintTextTheme"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/DetailUserTextTheme"
                    android:text="@string/phone" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout style="@style/LayoutAttributeUser">

                <TextView
                    style="@style/DetailUserHintTextTheme"
                    android:text="@string/website" />

                <TextView
                    android:id="@+id/website"
                    style="@style/DetailUserTextTheme"
                    android:text="@string/website" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout style="@style/LayoutAttributeUser">

                <TextView
                    style="@style/DetailUserHintTextTheme"
                    android:text="@string/company" />

                <TextView
                    android:id="@+id/company"
                    style="@style/DetailUserTextTheme"
                    android:text="@string/company" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout style="@style/LayoutAttributeUser">

                <TextView
                    style="@style/DetailUserHintTextTheme"
                    android:text="@string/geolocation" />

                <TextView
                    android:id="@+id/geolocation"
                    style="@style/DetailUserTextTheme"
                    android:text="@string/geolocation" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>